--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.6",
+    "standard": "^17.0.0",
+    "tailwindcss": "^3.2.7"
   }
 }
